--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -2,8 +2,8 @@
 <html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Basecamp</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+    <title>Rocky Talky</title>
   </head>
   <body>
     <div id="root"></div>
